staging all files

--- a/Git/GitOne.html
+++ b/Git/GitOne.html
@@ -183,7 +183,7 @@ hljs.initHighlightingOnLoad();
 
 <h3>Alan T. Arnholt</h3>
 
-<p>Last compiled Tuesday, February 04, 2014 - 8:33:21 PM.</p>
+<p>Last compiled Tuesday, February 04, 2014 - 8:34:28 PM.</p>
 
 <p>Download and install the lastest version of <a href="http://git-scm.com/downloads">Git.</a></p>
 
@@ -311,13 +311,13 @@ to click on File -&gt; New Project </p>
 </code></pre>
 
 <pre><code>On branch master
-Your branch is up-to-date with &#39;origin/master&#39;.
+Your branch is ahead of &#39;origin/master&#39; by 1 commit.
+  (use &quot;git push&quot; to publish your local commits)
 
 Changes not staged for commit:
   (use &quot;git add &lt;file&gt;...&quot; to update what will be committed)
   (use &quot;git checkout -- &lt;file&gt;...&quot; to discard changes in working directory)
 
-    modified:   GitOne.Rmd
     modified:   GitOne.html
     modified:   GitOne.md
 
@@ -334,8 +334,8 @@ taken of the commit with the message &ldquo;staging all files.&rdquo;</p>
 git commit  -m &quot;staging all files&quot;
 </code></pre>
 
-<pre><code>[master c8a1e52] staging all files
- 3 files changed, 6 insertions(+), 6 deletions(-)
+<pre><code>[master fffc0a5] staging all files
+ 2 files changed, 179 insertions(+), 287 deletions(-)
 </code></pre>
 
 <p>Check the status after the last commit.</p>
@@ -344,7 +344,7 @@ git commit  -m &quot;staging all files&quot;
 </code></pre>
 
 <pre><code>On branch master
-Your branch is ahead of &#39;origin/master&#39; by 1 commit.
+Your branch is ahead of &#39;origin/master&#39; by 2 commits.
   (use &quot;git push&quot; to publish your local commits)
 
 nothing to commit, working directory clean
@@ -361,7 +361,7 @@ nothing to commit, working directory clean
 </code></pre>
 
 <pre><code>On branch master
-Your branch is ahead of &#39;origin/master&#39; by 1 commit.
+Your branch is ahead of &#39;origin/master&#39; by 2 commits.
   (use &quot;git push&quot; to publish your local commits)
 
 nothing to commit, working directory clean
@@ -372,7 +372,13 @@ nothing to commit, working directory clean
 <pre><code class="bash">git log  -3
 </code></pre>
 
-<pre><code>commit c8a1e5299f04a1314ed9b6c7762f2d33f6033bce
+<pre><code>commit fffc0a52f633f32d32b8b4b2aece08a6d43382a3
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Tue Feb 4 20:34:28 2014 -0500
+
+    staging all files
+
+commit c8a1e5299f04a1314ed9b6c7762f2d33f6033bce
 Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Tue Feb 4 20:33:21 2014 -0500
 
@@ -383,12 +389,6 @@ Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Tue Feb 4 20:30:42 2014 -0500
 
     note no spaces in path between &quot;paths&quot;...because no the machine finds &quot;bash&quot;!
-
-commit a254aa74912df2f0585b0228fc5ae5fdd7dec68d
-Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
-Date:   Tue Feb 4 20:26:46 2014 -0500
-
-    staging all files
 </code></pre>
 
 <p>That was ugly. Let us try some formatting.</p>
@@ -396,9 +396,9 @@ Date:   Tue Feb 4 20:26:46 2014 -0500
 <pre><code class="bash">git log --pretty=oneline -3
 </code></pre>
 
-<pre><code>c8a1e5299f04a1314ed9b6c7762f2d33f6033bce staging all files
+<pre><code>fffc0a52f633f32d32b8b4b2aece08a6d43382a3 staging all files
+c8a1e5299f04a1314ed9b6c7762f2d33f6033bce staging all files
 59d1bd3e72f7edca47d35b1820416359d197e857 note no spaces in path between &quot;paths&quot;...because no the machine finds &quot;bash&quot;!
-a254aa74912df2f0585b0228fc5ae5fdd7dec68d staging all files
 </code></pre>
 
 <p>The previous output was to brief to suit me.  Let us try some further formatting.</p>
@@ -406,9 +406,9 @@ a254aa74912df2f0585b0228fc5ae5fdd7dec68d staging all files
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3
 </code></pre>
 
-<pre><code>c8a1e52 Tue Feb 4 20:33:21 2014 -0500- staging all files [Alan Arnholt]
+<pre><code>fffc0a5 Tue Feb 4 20:34:28 2014 -0500- staging all files [Alan Arnholt]
+c8a1e52 Tue Feb 4 20:33:21 2014 -0500- staging all files [Alan Arnholt]
 59d1bd3 Tue Feb 4 20:30:42 2014 -0500- note no spaces in path between &quot;paths&quot;...because no the machine finds &quot;bash&quot;! [Alan Arnholt]
-a254aa7 Tue Feb 4 20:26:46 2014 -0500- staging all files [Alan Arnholt]
 </code></pre>
 
 <p>Maybe even some statistics?</p>
@@ -416,7 +416,12 @@ a254aa7 Tue Feb 4 20:26:46 2014 -0500- staging all files [Alan Arnholt]
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3 --stat
 </code></pre>
 
-<pre><code>c8a1e52 Tue Feb 4 20:33:21 2014 -0500- staging all files [Alan Arnholt]
+<pre><code>fffc0a5 Tue Feb 4 20:34:28 2014 -0500- staging all files [Alan Arnholt]
+ Git/GitOne.html | 236 ++++++++++++++++++++++----------------------------------
+ Git/GitOne.md   | 230 +++++++++++++++++++++---------------------------------
+ 2 files changed, 179 insertions(+), 287 deletions(-)
+
+c8a1e52 Tue Feb 4 20:33:21 2014 -0500- staging all files [Alan Arnholt]
  Git/GitOne.Rmd  | 4 ++--
  Git/GitOne.html | 4 ++--
  Git/GitOne.md   | 4 ++--
@@ -483,19 +488,6 @@ a254aa7 Tue Feb 4 20:26:46 2014 -0500- staging all files [Alan Arnholt]
  .../verify_f81c0bc60aa03951091d1db4b41e9fca.rdb    |   0
  .../verify_f81c0bc60aa03951091d1db4b41e9fca.rdx    | Bin 113 -&gt; 0 bytes
  59 files changed, 481 insertions(+), 24 deletions(-)
-
-a254aa7 Tue Feb 4 20:26:46 2014 -0500- staging all files [Alan Arnholt]
- Git/GitOne.Rmd                                            |   2 +-
- Git/cache/GITsetup_1e85974789856654fd6170253d9fcbe2.RData | Bin 0 -&gt; 199 bytes
- Git/cache/GITsetup_1e85974789856654fd6170253d9fcbe2.rdb   |   0
- Git/cache/GITsetup_1e85974789856654fd6170253d9fcbe2.rdx   | Bin 0 -&gt; 113 bytes
- Git/cache/STATUS_c084c907b84567e22073c1b7e27f7062.RData   | Bin 0 -&gt; 537 bytes
- Git/cache/STATUS_c084c907b84567e22073c1b7e27f7062.rdb     |   0
- Git/cache/STATUS_c084c907b84567e22073c1b7e27f7062.rdx     | Bin 0 -&gt; 113 bytes
- Git/cache/verify_2d584a4c99894e4c308ba44967920be7.RData   | Bin 0 -&gt; 498 bytes
- Git/cache/verify_2d584a4c99894e4c308ba44967920be7.rdb     |   0
- Git/cache/verify_2d584a4c99894e4c308ba44967920be7.rdx     | Bin 0 -&gt; 113 bytes
- 10 files changed, 1 insertion(+), 1 deletion(-)
 </code></pre>
 
 <p>Now, just to show how cool this is, we will mix in a little <code>R</code>.</p>
