--- a/Git/GitOne.html
+++ b/Git/GitOne.html
@@ -183,7 +183,7 @@ hljs.initHighlightingOnLoad();
 
 <h3>Alan T. Arnholt</h3>
 
-<p>Last compiled Tuesday, February 04, 2014 - 8:34:28 PM.</p>
+<p>Last compiled Tuesday, February 04, 2014 - 8:34:55 PM.</p>
 
 <p>Download and install the lastest version of <a href="http://git-scm.com/downloads">Git.</a></p>
 
@@ -311,7 +311,7 @@ to click on File -&gt; New Project </p>
 </code></pre>
 
 <pre><code>On branch master
-Your branch is ahead of &#39;origin/master&#39; by 1 commit.
+Your branch is ahead of &#39;origin/master&#39; by 2 commits.
   (use &quot;git push&quot; to publish your local commits)
 
 Changes not staged for commit:
@@ -334,8 +334,8 @@ taken of the commit with the message &ldquo;staging all files.&rdquo;</p>
 git commit  -m &quot;staging all files&quot;
 </code></pre>
 
-<pre><code>[master fffc0a5] staging all files
- 2 files changed, 179 insertions(+), 287 deletions(-)
+<pre><code>[master 7efffa7] staging all files
+ 2 files changed, 44 insertions(+), 60 deletions(-)
 </code></pre>
 
 <p>Check the status after the last commit.</p>
@@ -344,7 +344,7 @@ git commit  -m &quot;staging all files&quot;
 </code></pre>
 
 <pre><code>On branch master
-Your branch is ahead of &#39;origin/master&#39; by 2 commits.
+Your branch is ahead of &#39;origin/master&#39; by 3 commits.
   (use &quot;git push&quot; to publish your local commits)
 
 nothing to commit, working directory clean
@@ -361,7 +361,7 @@ nothing to commit, working directory clean
 </code></pre>
 
 <pre><code>On branch master
-Your branch is ahead of &#39;origin/master&#39; by 2 commits.
+Your branch is ahead of &#39;origin/master&#39; by 3 commits.
   (use &quot;git push&quot; to publish your local commits)
 
 nothing to commit, working directory clean
@@ -372,7 +372,13 @@ nothing to commit, working directory clean
 <pre><code class="bash">git log  -3
 </code></pre>
 
-<pre><code>commit fffc0a52f633f32d32b8b4b2aece08a6d43382a3
+<pre><code>commit 7efffa7f8d78fbbb20c0a62f07fe44b2337799b3
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Tue Feb 4 20:34:56 2014 -0500
+
+    staging all files
+
+commit fffc0a52f633f32d32b8b4b2aece08a6d43382a3
 Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Tue Feb 4 20:34:28 2014 -0500
 
@@ -383,12 +389,6 @@ Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Tue Feb 4 20:33:21 2014 -0500
 
     staging all files
-
-commit 59d1bd3e72f7edca47d35b1820416359d197e857
-Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
-Date:   Tue Feb 4 20:30:42 2014 -0500
-
-    note no spaces in path between &quot;paths&quot;...because no the machine finds &quot;bash&quot;!
 </code></pre>
 
 <p>That was ugly. Let us try some formatting.</p>
@@ -396,9 +396,9 @@ Date:   Tue Feb 4 20:30:42 2014 -0500
 <pre><code class="bash">git log --pretty=oneline -3
 </code></pre>
 
-<pre><code>fffc0a52f633f32d32b8b4b2aece08a6d43382a3 staging all files
+<pre><code>7efffa7f8d78fbbb20c0a62f07fe44b2337799b3 staging all files
+fffc0a52f633f32d32b8b4b2aece08a6d43382a3 staging all files
 c8a1e5299f04a1314ed9b6c7762f2d33f6033bce staging all files
-59d1bd3e72f7edca47d35b1820416359d197e857 note no spaces in path between &quot;paths&quot;...because no the machine finds &quot;bash&quot;!
 </code></pre>
 
 <p>The previous output was to brief to suit me.  Let us try some further formatting.</p>
@@ -406,9 +406,9 @@ c8a1e5299f04a1314ed9b6c7762f2d33f6033bce staging all files
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3
 </code></pre>
 
-<pre><code>fffc0a5 Tue Feb 4 20:34:28 2014 -0500- staging all files [Alan Arnholt]
+<pre><code>7efffa7 Tue Feb 4 20:34:56 2014 -0500- staging all files [Alan Arnholt]
+fffc0a5 Tue Feb 4 20:34:28 2014 -0500- staging all files [Alan Arnholt]
 c8a1e52 Tue Feb 4 20:33:21 2014 -0500- staging all files [Alan Arnholt]
-59d1bd3 Tue Feb 4 20:30:42 2014 -0500- note no spaces in path between &quot;paths&quot;...because no the machine finds &quot;bash&quot;! [Alan Arnholt]
 </code></pre>
 
 <p>Maybe even some statistics?</p>
@@ -416,7 +416,12 @@ c8a1e52 Tue Feb 4 20:33:21 2014 -0500- staging all files [Alan Arnholt]
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3 --stat
 </code></pre>
 
-<pre><code>fffc0a5 Tue Feb 4 20:34:28 2014 -0500- staging all files [Alan Arnholt]
+<pre><code>7efffa7 Tue Feb 4 20:34:56 2014 -0500- staging all files [Alan Arnholt]
+ Git/GitOne.html | 56 ++++++++++++++++++++++++--------------------------------
+ Git/GitOne.md   | 48 ++++++++++++++++++++----------------------------
+ 2 files changed, 44 insertions(+), 60 deletions(-)
+
+fffc0a5 Tue Feb 4 20:34:28 2014 -0500- staging all files [Alan Arnholt]
  Git/GitOne.html | 236 ++++++++++++++++++++++----------------------------------
  Git/GitOne.md   | 230 +++++++++++++++++++++---------------------------------
  2 files changed, 179 insertions(+), 287 deletions(-)
@@ -426,68 +431,6 @@ c8a1e52 Tue Feb 4 20:33:21 2014 -0500- staging all files [Alan Arnholt]
  Git/GitOne.html | 4 ++--
  Git/GitOne.md   | 4 ++--
  3 files changed, 6 insertions(+), 6 deletions(-)
-
-59d1bd3 Tue Feb 4 20:30:42 2014 -0500- note no spaces in path between &quot;paths&quot;...because no the machine finds &quot;bash&quot;! [Alan Arnholt]
- Git/GitOne.html                                    | 248 +++++++++++++++++++-
- Git/GitOne.md                                      | 257 ++++++++++++++++++++-
- .../ADD_37d613968d89bfc0fc573bd5f4d62239.RData     | Bin 0 -&gt; 355 bytes
- Git/cache/ADD_37d613968d89bfc0fc573bd5f4d62239.rdb |   0
- Git/cache/ADD_37d613968d89bfc0fc573bd5f4d62239.rdx | Bin 0 -&gt; 113 bytes
- .../ADD_540999b9c1daaa4c31ccd2c535b3e499.RData     | Bin 149 -&gt; 0 bytes
- Git/cache/ADD_540999b9c1daaa4c31ccd2c535b3e499.rdb |   0
- Git/cache/ADD_540999b9c1daaa4c31ccd2c535b3e499.rdx | Bin 113 -&gt; 0 bytes
- ...GITsetup_b0c970510ef94c7a948b007d4995e2c2.RData | Bin 196 -&gt; 0 bytes
- .../GITsetup_b0c970510ef94c7a948b007d4995e2c2.rdb  |   0
- .../GITsetup_b0c970510ef94c7a948b007d4995e2c2.rdx  | Bin 113 -&gt; 0 bytes
- .../LOGP2_0930b13cd33e07882e62208756650246.RData   | Bin 157 -&gt; 0 bytes
- .../LOGP2_0930b13cd33e07882e62208756650246.rdb     |   0
- .../LOGP2_0930b13cd33e07882e62208756650246.rdx     | Bin 113 -&gt; 0 bytes
- .../LOGP2_faf1a7fcf18137324c7c98647d730ea6.RData   | Bin 0 -&gt; 333 bytes
- .../LOGP2_faf1a7fcf18137324c7c98647d730ea6.rdb     |   0
- .../LOGP2_faf1a7fcf18137324c7c98647d730ea6.rdx     | Bin 0 -&gt; 113 bytes
- .../LOGP3_659c34076beb625769e9c295d213ece7.RData   | Bin 164 -&gt; 0 bytes
- .../LOGP3_659c34076beb625769e9c295d213ece7.rdb     |   0
- .../LOGP3_659c34076beb625769e9c295d213ece7.rdx     | Bin 113 -&gt; 0 bytes
- .../LOGP3_ad807c34590b81f628e6cb6032102919.RData   | Bin 0 -&gt; 974 bytes
- .../LOGP3_ad807c34590b81f628e6cb6032102919.rdb     |   0
- .../LOGP3_ad807c34590b81f628e6cb6032102919.rdx     | Bin 0 -&gt; 113 bytes
- .../LOGP_85b7cbcb21a72630e78bd3b750ea156f.RData    | Bin 0 -&gt; 329 bytes
- .../LOGP_85b7cbcb21a72630e78bd3b750ea156f.rdb      |   0
- .../LOGP_85b7cbcb21a72630e78bd3b750ea156f.rdx      | Bin 0 -&gt; 113 bytes
- .../LOGP_cd45074def45e6f242a15e5d861bc924.RData    | Bin 138 -&gt; 0 bytes
- .../LOGP_cd45074def45e6f242a15e5d861bc924.rdb      |   0
- .../LOGP_cd45074def45e6f242a15e5d861bc924.rdx      | Bin 113 -&gt; 0 bytes
- .../LOG_087011b0f8f69f16e2c2e5605086c615.RData     | Bin 0 -&gt; 408 bytes
- Git/cache/LOG_087011b0f8f69f16e2c2e5605086c615.rdb |   0
- Git/cache/LOG_087011b0f8f69f16e2c2e5605086c615.rdx | Bin 0 -&gt; 113 bytes
- .../LOG_5e9c536809b42ad3cb23e4fa1a84bd45.RData     | Bin 121 -&gt; 0 bytes
- Git/cache/LOG_5e9c536809b42ad3cb23e4fa1a84bd45.rdb |   0
- Git/cache/LOG_5e9c536809b42ad3cb23e4fa1a84bd45.rdx | Bin 113 -&gt; 0 bytes
- .../PUSH_4a4f909daa6525f7416b0e0df208f325.RData    | Bin 0 -&gt; 121 bytes
- .../PUSH_4a4f909daa6525f7416b0e0df208f325.rdb      |   0
- .../PUSH_4a4f909daa6525f7416b0e0df208f325.rdx      | Bin 0 -&gt; 113 bytes
- .../PUSH_ccaa07cffd798cbbde965296b32e8be8.RData    | Bin 119 -&gt; 0 bytes
- .../PUSH_ccaa07cffd798cbbde965296b32e8be8.rdb      |   0
- .../PUSH_ccaa07cffd798cbbde965296b32e8be8.rdx      | Bin 113 -&gt; 0 bytes
- .../STATUS2_5e0c7941154f2f6f6d64705c7f833e80.RData | Bin 124 -&gt; 0 bytes
- .../STATUS2_5e0c7941154f2f6f6d64705c7f833e80.rdb   |   0
- .../STATUS2_5e0c7941154f2f6f6d64705c7f833e80.rdx   | Bin 113 -&gt; 0 bytes
- .../STATUS2_8ac7feaeff926fc5b62fe3cb6b50f859.RData | Bin 0 -&gt; 580 bytes
- .../STATUS2_8ac7feaeff926fc5b62fe3cb6b50f859.rdb   |   0
- .../STATUS2_8ac7feaeff926fc5b62fe3cb6b50f859.rdx   | Bin 0 -&gt; 113 bytes
- .../STATUS3_12105d35cf1bc9dd32a9a4e2704fe895.RData | Bin 0 -&gt; 729 bytes
- .../STATUS3_12105d35cf1bc9dd32a9a4e2704fe895.rdb   |   0
- .../STATUS3_12105d35cf1bc9dd32a9a4e2704fe895.rdx   | Bin 0 -&gt; 113 bytes
- .../STATUS3_d5fbd0803a466f8b6e8890bfd4fc3513.RData | Bin 124 -&gt; 0 bytes
- .../STATUS3_d5fbd0803a466f8b6e8890bfd4fc3513.rdb   |   0
- .../STATUS3_d5fbd0803a466f8b6e8890bfd4fc3513.rdx   | Bin 113 -&gt; 0 bytes
- .../STATUS_c69090ea171fdc61120b83150e1ec346.RData  | Bin 123 -&gt; 0 bytes
- .../STATUS_c69090ea171fdc61120b83150e1ec346.rdb    |   0
- .../STATUS_c69090ea171fdc61120b83150e1ec346.rdx    | Bin 113 -&gt; 0 bytes
- .../verify_f81c0bc60aa03951091d1db4b41e9fca.RData  | Bin 130 -&gt; 0 bytes
- .../verify_f81c0bc60aa03951091d1db4b41e9fca.rdb    |   0
- .../verify_f81c0bc60aa03951091d1db4b41e9fca.rdx    | Bin 113 -&gt; 0 bytes
- 59 files changed, 481 insertions(+), 24 deletions(-)
 </code></pre>
 
 <p>Now, just to show how cool this is, we will mix in a little <code>R</code>.</p>
