--- a/Git/GitOne.html
+++ b/Git/GitOne.html
@@ -183,7 +183,7 @@ hljs.initHighlightingOnLoad();
 
 <h3>Alan T. Arnholt</h3>
 
-<p>Last compiled Tuesday, February 04, 2014 - 8:43:44 PM.</p>
+<p>Last compiled Tuesday, February 04, 2014 - 8:45:22 PM.</p>
 
 <p>Download and install the lastest version of <a href="http://git-scm.com/downloads">Git.</a></p>
 
@@ -203,7 +203,7 @@ hljs.initHighlightingOnLoad();
 administrator.  Use the default options at each step of the installation if you are unsure 
 what you are doing.  When the installation arrives at the screen adjusting your PATH 
 environment, click in the circle to the left of <strong>Run Git from the Windows Command Prompt</strong>.
-You may need to manually add the path to where the <strong>bash.exe</strong> resides.  Run the 
+You may need to manually add the path to where the <code>bash.exe</code> resides.  Run the 
 following at the <code>R</code> prompt to make sure <code>R</code> knows where to find <code>bash</code>.</p>
 
 <pre><code class="r">Sys.which(&quot;bash&quot;)
@@ -213,7 +213,7 @@ following at the <code>R</code> prompt to make sure <code>R</code> knows where t
 &quot;C:\\PROGRA~2\\Git\\bin\\bash.exe&quot; 
 </code></pre>
 
-<p>If the output does not specify the path to <strong>bash</strong> you have a problem.</p>
+<p>If the output does not specify the path to <code>bash</code>, the path to <code>bash</code> is not properly configured.</p>
 
 <h2>Initial Setup</h2>
 
@@ -322,7 +322,7 @@ to click on File -&gt; New Project </p>
 </code></pre>
 
 <pre><code>On branch master
-Your branch is ahead of &#39;origin/master&#39; by 1 commit.
+Your branch is ahead of &#39;origin/master&#39; by 2 commits.
   (use &quot;git push&quot; to publish your local commits)
 
 Changes not staged for commit:
@@ -333,13 +333,6 @@ Changes not staged for commit:
     modified:   GitOne.html
     modified:   GitOne.md
     modified:   figure/ggplot2Graphs.png
-
-Untracked files:
-  (use &quot;git add &lt;file&gt;...&quot; to include in what will be committed)
-
-    cache/BashCheck_3a4552886a749e14bd443de33a754ec2.RData
-    cache/BashCheck_3a4552886a749e14bd443de33a754ec2.rdb
-    cache/BashCheck_3a4552886a749e14bd443de33a754ec2.rdx
 
 no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&quot;)
 </code></pre>
@@ -354,11 +347,8 @@ taken of the commit with the message &ldquo;staging all files.&rdquo;</p>
 git commit  -m &quot;staging all files&quot;
 </code></pre>
 
-<pre><code>[master 9c783ea] staging all files
- 7 files changed, 85 insertions(+), 68 deletions(-)
- create mode 100644 Git/cache/BashCheck_3a4552886a749e14bd443de33a754ec2.RData
- create mode 100644 Git/cache/BashCheck_3a4552886a749e14bd443de33a754ec2.rdb
- create mode 100644 Git/cache/BashCheck_3a4552886a749e14bd443de33a754ec2.rdx
+<pre><code>[master 9f34531] staging all files
+ 4 files changed, 85 insertions(+), 45 deletions(-)
  rewrite Git/figure/ggplot2Graphs.png (99%)
 </code></pre>
 
@@ -368,7 +358,7 @@ git commit  -m &quot;staging all files&quot;
 </code></pre>
 
 <pre><code>On branch master
-Your branch is ahead of &#39;origin/master&#39; by 2 commits.
+Your branch is ahead of &#39;origin/master&#39; by 3 commits.
   (use &quot;git push&quot; to publish your local commits)
 
 nothing to commit, working directory clean
@@ -385,7 +375,7 @@ nothing to commit, working directory clean
 </code></pre>
 
 <pre><code>On branch master
-Your branch is ahead of &#39;origin/master&#39; by 2 commits.
+Your branch is ahead of &#39;origin/master&#39; by 3 commits.
   (use &quot;git push&quot; to publish your local commits)
 
 nothing to commit, working directory clean
@@ -396,7 +386,13 @@ nothing to commit, working directory clean
 <pre><code class="bash">git log  -3
 </code></pre>
 
-<pre><code>commit 9c783ea910108bbbbad5d379c98cde558e19bf4e
+<pre><code>commit 9f345316fb7a42140f106cb28dcc3ff5f6843776
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Tue Feb 4 20:45:22 2014 -0500
+
+    staging all files
+
+commit 9c783ea910108bbbbad5d379c98cde558e19bf4e
 Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Tue Feb 4 20:43:45 2014 -0500
 
@@ -407,12 +403,6 @@ Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Tue Feb 4 20:43:11 2014 -0500
 
     staging all files
-
-commit 0d97de05231716b46e5ef8ce6daf095e647f21e8
-Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
-Date:   Tue Feb 4 20:35:35 2014 -0500
-
-    just change time stamp
 </code></pre>
 
 <p>That was ugly. Let us try some formatting.</p>
@@ -420,9 +410,9 @@ Date:   Tue Feb 4 20:35:35 2014 -0500
 <pre><code class="bash">git log --pretty=oneline -3
 </code></pre>
 
-<pre><code>9c783ea910108bbbbad5d379c98cde558e19bf4e staging all files
+<pre><code>9f345316fb7a42140f106cb28dcc3ff5f6843776 staging all files
+9c783ea910108bbbbad5d379c98cde558e19bf4e staging all files
 45a14d5cec5e7dd77b9f3a06eb6382c35689c5f0 staging all files
-0d97de05231716b46e5ef8ce6daf095e647f21e8 just change time stamp
 </code></pre>
 
 <p>The previous output was to brief to suit me.  Let us try some further formatting.</p>
@@ -430,9 +420,9 @@ Date:   Tue Feb 4 20:35:35 2014 -0500
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3
 </code></pre>
 
-<pre><code>9c783ea Tue Feb 4 20:43:45 2014 -0500- staging all files [Alan Arnholt]
+<pre><code>9f34531 Tue Feb 4 20:45:22 2014 -0500- staging all files [Alan Arnholt]
+9c783ea Tue Feb 4 20:43:45 2014 -0500- staging all files [Alan Arnholt]
 45a14d5 Tue Feb 4 20:43:11 2014 -0500- staging all files [Alan Arnholt]
-0d97de0 Tue Feb 4 20:35:35 2014 -0500- just change time stamp [Alan Arnholt]
 </code></pre>
 
 <p>Maybe even some statistics?</p>
@@ -440,7 +430,14 @@ Date:   Tue Feb 4 20:35:35 2014 -0500
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3 --stat
 </code></pre>
 
-<pre><code>9c783ea Tue Feb 4 20:43:45 2014 -0500- staging all files [Alan Arnholt]
+<pre><code>9f34531 Tue Feb 4 20:45:22 2014 -0500- staging all files [Alan Arnholt]
+ Git/GitOne.Rmd               |   4 +--
+ Git/GitOne.html              |  68 ++++++++++++++++++++++++++++---------------
+ Git/GitOne.md                |  58 ++++++++++++++++++++++++------------
+ Git/figure/ggplot2Graphs.png | Bin 6492 -&gt; 6426 bytes
+ 4 files changed, 85 insertions(+), 45 deletions(-)
+
+9c783ea Tue Feb 4 20:43:45 2014 -0500- staging all files [Alan Arnholt]
  Git/GitOne.Rmd                                     |   2 +-
  Git/GitOne.html                                    |  79 +++++++++++----------
  Git/GitOne.md                                      |  72 +++++++++++--------
@@ -453,11 +450,6 @@ Date:   Tue Feb 4 20:35:35 2014 -0500
 45a14d5 Tue Feb 4 20:43:11 2014 -0500- staging all files [Alan Arnholt]
  Git/GitOne.Rmd | 7 +++++++
  1 file changed, 7 insertions(+)
-
-0d97de0 Tue Feb 4 20:35:35 2014 -0500- just change time stamp [Alan Arnholt]
- Git/GitOne.html | 103 +++++++++++++-------------------------------------------
- Git/GitOne.md   |  95 +++++++++++----------------------------------------
- 2 files changed, 42 insertions(+), 156 deletions(-)
 </code></pre>
 
 <p>Now, just to show how cool this is, we will mix in a little <code>R</code>.</p>
