--- a/Git/GitOne.html
+++ b/Git/GitOne.html
@@ -183,7 +183,7 @@ hljs.initHighlightingOnLoad();
 
 <h3>Alan T. Arnholt</h3>
 
-<p>Last compiled Wednesday, February 05, 2014 - 09:26:52.</p>
+<p>Last compiled Wednesday, February 05, 2014 - 09:28:18.</p>
 
 <p>Download and install the lastest version of <a href="http://git-scm.com/downloads">Git.</a></p>
 
@@ -267,8 +267,8 @@ branch.master.remote=origin
 branch.master.merge=refs/heads/master
 </code></pre>
 
-<p>From the third line of the previous output, one can see the <code>credential.helper</code> is 
-being used (when I run this with OSX, but not from home.) </p>
+<p>From the third line of the previous output, one can see the 
+<code>credential.helper</code> is being used.</p>
 
 <h3>Creating a GitHub Account</h3>
 
@@ -311,7 +311,17 @@ to click on File -&gt; New Project </p>
 </code></pre>
 
 <pre><code># On branch master
-nothing to commit (working directory clean)
+# Changes not staged for commit:
+#   (use &quot;git add &lt;file&gt;...&quot; to update what will be committed)
+#   (use &quot;git checkout -- &lt;file&gt;...&quot; to discard changes in working directory)
+#
+#   modified:   GitOne.Rmd
+#   modified:   GitOne.html
+#   modified:   GitOne.md
+#   modified:   figure/Rgraph.png
+#   modified:   figure/ggplot2Graphs.png
+#
+no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&quot;)
 </code></pre>
 
 <p>The <code>git status</code> shows us what files are not staged for a commit.  Before files can be
@@ -324,8 +334,10 @@ taken of the commit with the message &ldquo;staging all files.&rdquo;</p>
 git commit  -m &quot;staging all files&quot;
 </code></pre>
 
-<pre><code># On branch master
-nothing to commit (working directory clean)
+<pre><code>[master 9b811b6] staging all files
+ 5 files changed, 65 insertions(+), 125 deletions(-)
+ rewrite Git/figure/Rgraph.png (98%)
+ rewrite Git/figure/ggplot2Graphs.png (99%)
 </code></pre>
 
 <p>Check the status after the last commit.</p>
@@ -334,6 +346,8 @@ nothing to commit (working directory clean)
 </code></pre>
 
 <pre><code># On branch master
+# Your branch is ahead of &#39;origin/master&#39; by 1 commit.
+#
 nothing to commit (working directory clean)
 </code></pre>
 
@@ -356,7 +370,13 @@ nothing to commit (working directory clean)
 <pre><code class="bash">git log  -3
 </code></pre>
 
-<pre><code>commit c3ea31798239b3d90ac26729101870cbb413ab69
+<pre><code>commit 9b811b6897fc460b1da866626df8a657d422d01b
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Wed Feb 5 09:28:18 2014 -0500
+
+    staging all files
+
+commit c3ea31798239b3d90ac26729101870cbb413ab69
 Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Tue Feb 4 20:47:04 2014 -0500
 
@@ -367,12 +387,6 @@ Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Tue Feb 4 20:45:22 2014 -0500
 
     staging all files
-
-commit 9c783ea910108bbbbad5d379c98cde558e19bf4e
-Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
-Date:   Tue Feb 4 20:43:45 2014 -0500
-
-    staging all files
 </code></pre>
 
 <p>That was ugly. Let us try some formatting.</p>
@@ -380,9 +394,9 @@ Date:   Tue Feb 4 20:43:45 2014 -0500
 <pre><code class="bash">git log --pretty=oneline -3
 </code></pre>
 
-<pre><code>c3ea31798239b3d90ac26729101870cbb413ab69 add bash check
+<pre><code>9b811b6897fc460b1da866626df8a657d422d01b staging all files
+c3ea31798239b3d90ac26729101870cbb413ab69 add bash check
 9f345316fb7a42140f106cb28dcc3ff5f6843776 staging all files
-9c783ea910108bbbbad5d379c98cde558e19bf4e staging all files
 </code></pre>
 
 <p>The previous output was to brief to suit me.  Let us try some further formatting.</p>
@@ -390,9 +404,9 @@ Date:   Tue Feb 4 20:43:45 2014 -0500
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3
 </code></pre>
 
-<pre><code>c3ea317 Tue Feb 4 20:47:04 2014 -0500- add bash check [Alan Arnholt]
+<pre><code>9b811b6 Wed Feb 5 09:28:18 2014 -0500- staging all files [Alan Arnholt]
+c3ea317 Tue Feb 4 20:47:04 2014 -0500- add bash check [Alan Arnholt]
 9f34531 Tue Feb 4 20:45:22 2014 -0500- staging all files [Alan Arnholt]
-9c783ea Tue Feb 4 20:43:45 2014 -0500- staging all files [Alan Arnholt]
 </code></pre>
 
 <p>Maybe even some statistics?</p>
@@ -400,7 +414,15 @@ Date:   Tue Feb 4 20:43:45 2014 -0500
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3 --stat
 </code></pre>
 
-<pre><code>c3ea317 Tue Feb 4 20:47:04 2014 -0500- add bash check [Alan Arnholt]
+<pre><code>9b811b6 Wed Feb 5 09:28:18 2014 -0500- staging all files [Alan Arnholt]
+ Git/GitOne.Rmd               |   4 +-
+ Git/GitOne.html              | 100 +++++++++++++++----------------------------
+ Git/GitOne.md                |  86 ++++++++++++-------------------------
+ Git/figure/Rgraph.png        | Bin 3696 -&gt; 17781 bytes
+ Git/figure/ggplot2Graphs.png | Bin 6426 -&gt; 32780 bytes
+ 5 files changed, 65 insertions(+), 125 deletions(-)
+
+c3ea317 Tue Feb 4 20:47:04 2014 -0500- add bash check [Alan Arnholt]
  Git/GitOne.html | 62 +++++++++++++++++++++++++--------------------------------
  Git/GitOne.md   | 54 +++++++++++++++++++++----------------------------
  2 files changed, 50 insertions(+), 66 deletions(-)
@@ -411,15 +433,6 @@ Date:   Tue Feb 4 20:43:45 2014 -0500
  Git/GitOne.md                |  58 ++++++++++++++++++++++++------------
  Git/figure/ggplot2Graphs.png | Bin 6492 -&gt; 6426 bytes
  4 files changed, 85 insertions(+), 45 deletions(-)
-
-9c783ea Tue Feb 4 20:43:45 2014 -0500- staging all files [Alan Arnholt]
- Git/GitOne.Rmd                                     |   2 +-
- Git/GitOne.html                                    |  79 +++++++++++----------
- Git/GitOne.md                                      |  72 +++++++++++--------
- ...ashCheck_3a4552886a749e14bd443de33a754ec2.RData | Bin 0 -&gt; 176 bytes
- .../BashCheck_3a4552886a749e14bd443de33a754ec2.rdx | Bin 0 -&gt; 113 bytes
- Git/figure/ggplot2Graphs.png                       | Bin 6426 -&gt; 6492 bytes
- 6 files changed, 85 insertions(+), 68 deletions(-)
 </code></pre>
 
 <p>Now, just to show how cool this is, we will mix in a little <code>R</code>.</p>
