update from office

--- a/Git/GitOne.html
+++ b/Git/GitOne.html
@@ -183,7 +183,7 @@ hljs.initHighlightingOnLoad();
 
 <h3>Alan T. Arnholt</h3>
 
-<p>Last compiled Wednesday, February 05, 2014 - 09:37:00.</p>
+<p>Last compiled Wednesday, February 05, 2014 - 09:41:10.</p>
 
 <p>Download and install the lastest version of <a href="http://git-scm.com/downloads">Git.</a></p>
 
@@ -315,10 +315,13 @@ to click on File -&gt; New Project </p>
 #   (use &quot;git add &lt;file&gt;...&quot; to update what will be committed)
 #   (use &quot;git checkout -- &lt;file&gt;...&quot; to discard changes in working directory)
 #
-#   modified:   GitOne.Rmd
 #   modified:   GitOne.html
 #   modified:   GitOne.md
 #
+# Untracked files:
+#   (use &quot;git add &lt;file&gt;...&quot; to include in what will be committed)
+#
+#   custom.css
 no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&quot;)
 </code></pre>
 
@@ -332,8 +335,9 @@ taken of the commit with the message &ldquo;staging all files.&rdquo;</p>
 git commit  -m &quot;staging all files&quot;
 </code></pre>
 
-<pre><code>[master 8b68e17] staging all files
- 3 files changed, 42 insertions(+), 40 deletions(-)
+<pre><code>[master eb87352] staging all files
+ 3 files changed, 60 insertions(+), 45 deletions(-)
+ create mode 100644 Git/custom.css
 </code></pre>
 
 <p>Check the status after the last commit.</p>
@@ -366,7 +370,13 @@ nothing to commit (working directory clean)
 <pre><code class="bash">git log  -3
 </code></pre>
 
-<pre><code>commit 8b68e172ed90a68365ef98ea7e28e7c7baa86c79
+<pre><code>commit eb873523a17b492a309a52fe0dd765f493b54908
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Wed Feb 5 09:41:10 2014 -0500
+
+    staging all files
+
+commit 8b68e172ed90a68365ef98ea7e28e7c7baa86c79
 Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Wed Feb 5 09:37:00 2014 -0500
 
@@ -377,12 +387,6 @@ Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Wed Feb 5 09:33:32 2014 -0500
 
     staging all files
-
-commit 40fe0656467163b6dcdfc1d7d311e7f0dbb0dd5a
-Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
-Date:   Wed Feb 5 09:33:01 2014 -0500
-
-    staging all files
 </code></pre>
 
 <p>That was ugly. Let us try some formatting.</p>
@@ -390,9 +394,9 @@ Date:   Wed Feb 5 09:33:01 2014 -0500
 <pre><code class="bash">git log --pretty=oneline -3
 </code></pre>
 
-<pre><code>8b68e172ed90a68365ef98ea7e28e7c7baa86c79 staging all files
+<pre><code>eb873523a17b492a309a52fe0dd765f493b54908 staging all files
+8b68e172ed90a68365ef98ea7e28e7c7baa86c79 staging all files
 1a0f584c0f52a41d5d7707d60a007c2a946ebd77 staging all files
-40fe0656467163b6dcdfc1d7d311e7f0dbb0dd5a staging all files
 </code></pre>
 
 <p>The previous output was to brief to suit me.  Let us try some further formatting.</p>
@@ -400,9 +404,9 @@ Date:   Wed Feb 5 09:33:01 2014 -0500
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3
 </code></pre>
 
-<pre><code>8b68e17 Wed Feb 5 09:37:00 2014 -0500- staging all files [Alan Arnholt]
+<pre><code>eb87352 Wed Feb 5 09:41:10 2014 -0500- staging all files [Alan Arnholt]
+8b68e17 Wed Feb 5 09:37:00 2014 -0500- staging all files [Alan Arnholt]
 1a0f584 Wed Feb 5 09:33:32 2014 -0500- staging all files [Alan Arnholt]
-40fe065 Wed Feb 5 09:33:01 2014 -0500- staging all files [Alan Arnholt]
 </code></pre>
 
 <p>Maybe even some statistics?</p>
@@ -410,7 +414,13 @@ Date:   Wed Feb 5 09:33:01 2014 -0500
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3 --stat
 </code></pre>
 
-<pre><code>8b68e17 Wed Feb 5 09:37:00 2014 -0500- staging all files [Alan Arnholt]
+<pre><code>eb87352 Wed Feb 5 09:41:10 2014 -0500- staging all files [Alan Arnholt]
+ Git/GitOne.html | 46 ++++++++++++++++++++++------------------------
+ Git/GitOne.md   | 40 +++++++++++++++++++---------------------
+ Git/custom.css  | 19 +++++++++++++++++++
+ 3 files changed, 60 insertions(+), 45 deletions(-)
+
+8b68e17 Wed Feb 5 09:37:00 2014 -0500- staging all files [Alan Arnholt]
  Git/GitOne.Rmd  |  4 ++--
  Git/GitOne.html | 43 ++++++++++++++++++++++---------------------
  Git/GitOne.md   | 35 ++++++++++++++++++-----------------
@@ -421,12 +431,6 @@ Date:   Wed Feb 5 09:33:01 2014 -0500
  Git/GitOne.html | 49 ++++++++++++++++++++++---------------------------
  Git/GitOne.md   | 41 ++++++++++++++++++-----------------------
  3 files changed, 41 insertions(+), 51 deletions(-)
-
-40fe065 Wed Feb 5 09:33:01 2014 -0500- staging all files [Alan Arnholt]
- Git/GitOne.Rmd  |  2 +-
- Git/GitOne.html | 67 ++++++++++++++++++++++++++++++++++-----------------------
- Git/GitOne.md   | 59 ++++++++++++++++++++++++++++++--------------------
- 3 files changed, 77 insertions(+), 51 deletions(-)
 </code></pre>
 
 <p>Now, just to show how cool this is, we will mix in a little <code>R</code>.</p>
