staging all files

--- a/Git/GitOne.html
+++ b/Git/GitOne.html
@@ -183,7 +183,7 @@ hljs.initHighlightingOnLoad();
 
 <h3>Alan T. Arnholt</h3>
 
-<p>Last compiled Friday, March 14, 2014 - 09:02:37.</p>
+<p>Last compiled Friday, March 14, 2014 - 09:04:02.</p>
 
 <p>What is version control and why should you use it?  Version control is a way to track files over time.  By using version control you will be able to retrace your steps to
 a previous working (read un-hosed) version of your files.  You may be using a form of version control now with files named like the following:</p>
@@ -200,7 +200,9 @@ local machines and two servers.  That works fine until you start using the files
 
 <p>I now use version control, specifically Git for virtually all of my work.  Notes for classes I am teaching have their own repositories (repos) and students and other interested parties can clone my repos.  If you have material that you would like to remain private, you can set up private repositories.  Thankfully, I have not lost a single file I could not recover since switching my work to Git.  </p>
 
-<p>One last thought before we talk about actually installing and using Git.  You may be thinking, I have never lost a file because I back up all of my files on an external hardrive.  Great; however, suppose you lose your machine and external hard drive to a catastrophic event.  Now what?  Well, if you are not using some form of version control, your work is most likely gone for good. If you were using version control, you just need to set up a new machine and continue your work where you left off.</p>
+<p>One last thought before we talk about actually installing and using Git.  You may be thinking, I have never lost a file because I back up all of my files on an external hardrive.  Great; however, suppose you lose your machine and external hard drive due to a catastrophic event.  Now what?  Well, if you are not using some form of version control, your work is most likely gone for good. If you were using version control, you just need to set up a new machine and continue your work where you left off.</p>
+
+<h3>Downloading Git</h3>
 
 <p>Download and install the lastest version of <a href="http://git-scm.com/downloads">Git.</a></p>
 
@@ -354,8 +356,8 @@ taken of the commit with the message &ldquo;staging all files.&rdquo;</p>
 git commit  -m &quot;staging all files&quot;
 </code></pre>
 
-<pre><code>[master 303ab5e] staging all files
- 3 files changed, 51 insertions(+), 51 deletions(-)
+<pre><code>[master 0b9e780] staging all files
+ 3 files changed, 50 insertions(+), 36 deletions(-)
 </code></pre>
 
 <p>Check the status after the last commit.</p>
@@ -407,7 +409,13 @@ no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&q
 <pre><code class="bash">git log  -3
 </code></pre>
 
-<pre><code>commit 303ab5eb3580d648dbe9abe6363773ed2b7faf4f
+<pre><code>commit 0b9e780f2297647a42fa78a0c85a19433f6ccfcc
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Fri Mar 14 09:04:02 2014 -0400
+
+    staging all files
+
+commit 303ab5eb3580d648dbe9abe6363773ed2b7faf4f
 Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Fri Mar 14 09:02:37 2014 -0400
 
@@ -418,12 +426,6 @@ Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Fri Mar 14 08:50:47 2014 -0400
 
     staging all files
-
-commit 84dee18dbbb18f61dc4516dcab9c9551ef17d18c
-Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
-Date:   Fri Mar 14 08:39:53 2014 -0400
-
-    staging all files
 </code></pre>
 
 <p>That was ugly. Let us try some formatting.</p>
@@ -431,9 +433,9 @@ Date:   Fri Mar 14 08:39:53 2014 -0400
 <pre><code class="bash">git log --pretty=oneline -3
 </code></pre>
 
-<pre><code>303ab5eb3580d648dbe9abe6363773ed2b7faf4f staging all files
+<pre><code>0b9e780f2297647a42fa78a0c85a19433f6ccfcc staging all files
+303ab5eb3580d648dbe9abe6363773ed2b7faf4f staging all files
 5d259eda57cec26a66dab47e9eb9c7163b0ddc36 staging all files
-84dee18dbbb18f61dc4516dcab9c9551ef17d18c staging all files
 </code></pre>
 
 <p>The previous output was to brief to suit me.  Let us try some further formatting.</p>
@@ -441,9 +443,9 @@ Date:   Fri Mar 14 08:39:53 2014 -0400
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3
 </code></pre>
 
-<pre><code>303ab5e Fri Mar 14 09:02:37 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>0b9e780 Fri Mar 14 09:04:02 2014 -0400- staging all files [Alan Arnholt]
+303ab5e Fri Mar 14 09:02:37 2014 -0400- staging all files [Alan Arnholt]
 5d259ed Fri Mar 14 08:50:47 2014 -0400- staging all files [Alan Arnholt]
-84dee18 Fri Mar 14 08:39:53 2014 -0400- staging all files [Alan Arnholt]
 </code></pre>
 
 <p>Maybe even some statistics?</p>
@@ -451,7 +453,13 @@ Date:   Fri Mar 14 08:39:53 2014 -0400
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3 --stat
 </code></pre>
 
-<pre><code>303ab5e Fri Mar 14 09:02:37 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>0b9e780 Fri Mar 14 09:04:02 2014 -0400- staging all files [Alan Arnholt]
+ Git/GitOne.Rmd  |  4 ++--
+ Git/GitOne.html | 45 ++++++++++++++++++++++++++-------------------
+ Git/GitOne.md   | 37 ++++++++++++++++++++++---------------
+ 3 files changed, 50 insertions(+), 36 deletions(-)
+
+303ab5e Fri Mar 14 09:02:37 2014 -0400- staging all files [Alan Arnholt]
  Git/GitOne.Rmd  |  6 +++++-
  Git/GitOne.html | 51 ++++++++++++++++++++++++---------------------------
  Git/GitOne.md   | 45 ++++++++++++++++++++++-----------------------
@@ -462,10 +470,6 @@ Date:   Fri Mar 14 08:39:53 2014 -0400
  Git/GitOne.html | 147 ++++++++++++++++++++++++++++++++++----------------------
  Git/GitOne.md   | 144 +++++++++++++++++++++++++++++++++---------------------
  3 files changed, 181 insertions(+), 114 deletions(-)
-
-84dee18 Fri Mar 14 08:39:53 2014 -0400- staging all files [Alan Arnholt]
- Git/GitOne.Rmd | 12 ++++++++++++
- 1 file changed, 12 insertions(+)
 </code></pre>
 
 <p>Now, just to show how cool this is, we will mix in a little <code>R</code>.</p>
